# git-history-proof-engineering-eval

./: .gitignore  CLAUDE.md  eval_results.json  pyproject.toml
docs/: lsp.md
src/baselines/: __init__.py  build_caches.py  cli.py  evaluator.py
src/git_history_proof_engineering_eval/: __init__.py  cli.py  config.py  config.toml  file_classifier.py  jsonl_writer.py  metrics.py  snapshot.py  structures.py  verification.py
